# talespun_rpg

./: .gitignore  LICENSE  README.md  characters.json  main.py  pyproject.toml  selections_runner.py
data/: ancestries.json  characters.json
data/ancestries/: elf.json
src/: main.py
src/talespun/: data_loader.py  main.py
src/talespun/data/: ancestries.json
src/talespun/model/: character.py
src/talespun/utils/: data_loader.py
